# virtual-referee

./: .gitignore  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  virtual-referee.cpp  virtual-referee.h  virtual-referee.hpp
